--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="hint_cpf">CPF</string>
     <string name="hint_cnpj">CNPJ</string>
     <string name="hint_default">CPF/CNPJ</string>
-    <string name="usuario_criado_com_sucesso">Usuario criado com sucesso</string>
+    <string name="usuario_criado_com_sucesso">Usuario salvo com sucesso</string>
+    <string name="usuario_atualziado_com_sucesso">Usuario atualizado com sucesso</string>
     <string name="usuario_cadastrado_com_sucesso">Usuario cadastrado com sucesso</string>
 
     <string name="error_cpf_cnpj">CPF/CNPJ inválido</string>
